<resources>
    <string name="app_name">谁牛金融</string>
    <string name="setting">设置</string>
    <string name="personal_setting">个人设置</string>
    <string name="copyright">Copyright &#169; 2014 DKHS.ALL Rights Reserved</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新···</string>
    <string name="updating">最近更新：</string>
    <string name="none">无</string>
    <string name="loading">正在加载···</string>
    <string name="login">登录</string>
    <string name="three_login">其他账号登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="start">开始体验</string>
    <string name="status_detail_label">正文页</string>
    <string name="tv_forget_password"><u>忘记密码</u></string>
    <string name="tv_register_now"><u>立即注册</u></string>
    <string name="account">邮箱/手机号</string>
    <string name="password">请输入密码,不少于6位</string>
    <string name="phone">手机号码</string>
    <string name="nickname">您的昵称</string>
    <string name="nickname_hint">中英文、数字或-、_</string>
    <string name="gender_secret">性别: 保密</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="tv_password">您的密码</string>
    <string name="tv_check_password">确认密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_check_password">请输入确认密码</string>
    <string name="cancel">取消</string>
    <string name="add_disscusion">发表讨论</string>
    <string name="telephone_desc">手机号码:</string>
    <string name="nickname_password_null">昵称或者密码不能为空</string>
    <string name="password_unsame">两次密码不一致</string>
    <string name="http_error_net">网络异常</string>
    <string name="retweet_comments_count">转(%1$s) 评(%2$s)</string>
    <string name="source">来自%1$s</string>
    <string name="time_min_before">%1$s分钟前</string>
    <string name="time_sec_before">%1$s秒前</string>
    <string name="total_status">共%1$s条讨论</string>
    <string name="related_comments">相关讨论(%1$s)</string>
    <string name="text_isnull">内容不能为空(%1$s)</string>
    <string name="stock_search_text">$请输入股票代码代码/中文名/英文名$</string>
    <string name="at_search_text">\@输入昵称或选择最近\@过的人</string>
    <string name="draft_box">草稿箱</string>
    <string name="for_repost">转发到我的首页</string>
    <string name="upload_image">上传图片</string>
    <string name="take_picture">拍照</string>
    <string name="local_image">选择本地图片</string>
    <string name="fomat_not_supported">格式不支持</string>
    <string name="type_retweet_comment">转发</string>
    <string name="type_write_comment">评论</string>
    <string name="type_write_status">发表讨论</string>
    <string name="fast_register"><u>一键快速注册</u></string>
    <string name="have_a_look"><u>随便看看</u></string>
    <string name="qq_login">" QQ登陆 "</string>
    <string name="weibo_login">" 新浪微博登陆 "</string>
    <string name="face_img_names">20smile_smile,21lol,14guzhang,19qiaopi,08jiayou,23earn,11niubi,24angry,25weep,09lose,26sleepy,18shiwang,10han,13why,16guile,12hand,22buxie,15xunka,chimian,shabi,gerou,maishen,tuxie,kelian,haixiu,koubi,jiong,43kunhuo,44sikao,45aoman,17shutup,27weiguan,03zan,04bian,05woshou,40cheers,36heart,37heartbreak,38flower,39shit,41full,42empty,34reverse,35bottom,33nengliquan,29put,30call,31add,32reduce,01buy,02sell,06maogugu,07deal,28moat</string>
    <string name="face_texts">[笑],[大笑],[鼓鼓掌],[俏皮],[加油],[赚大了],[牛],[怒了],[哭泣],[亏大了],[困顿],[好失望],[滴汗],[为什么],[跪了],[摊手],[不屑],[好逊],[关灯吃面],[呵呵傻逼],[割肉],[卖身],[吐血],[可怜],[害羞],[抠鼻],[​囧],[好困惑],[想一下],[傲],[不说了],[围观],[很赞],[不赞],[赞成],[干杯],[心心],[心碎了],[献花花],[一坨屎],[满仓],[空仓],[复盘],[抄底],[能力圈],[看空],[看多],[加仓],[减仓],[买入],[卖出],[毛估估],[成交],[护城河]</string>
    <string name="notify_write_status">正在发表讨论...</string>
    <string name="notify_comment_status">正在发表评论...</string>
    <string name="notify_write_status_success">发表讨论成功</string>
    <string name="notify_comment_status_success">发表评论成功</string>
    <string name="notify_write_status_fail">发表讨论失败</string>
    <string name="regist">完善资料</string>
    <string name="search">搜索</string>
    <string name="contact">好友动态</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道，长按拖拽排序</string>
    <string name="login_title">多块好省登录</string>
    <string name="noaccout">还没有账号?</string>
    <string name="find_passwrod">找回密码</string>
    <string name="portfolio_text">投资组合</string>
    <string name="combin">组合：%1$d</string>
    <string name="optional_stock_format">自选股:%1$d</string>
    <string name="optional_stock">自选股</string>
    <string name="tab_stock">股票</string>
    <string name="tab_fund">基金</string>
    <string name="tab_funds">组合</string>
    <string name="add_optional_stock">股票查询</string>
    <string name="stock_name">股票名称</string>
    <string name="all">全部</string>
    <string name="funds_name">基金名称</string>
    <string name="conbination_name">组合名称</string>
    <string name="current_value">当前价</string>
    <string name="price_change_ratio">涨跌幅</string>
    <string name="confirm">确定</string>
    <string name="fine">好</string>
    <string name="set_right_now">马上设置</string>
    <string name="verify">忘记手势密码</string>
    <string name="reinput">重新输入</string>
    <string name="more">更多</string>
    <string name="portfolio_position">持仓组合</string>
    <string name="duty_percent">%1$d&#037;</string>
    <string name="my_combination">我的组合</string>
    <string name="desc_format">描述:%1$s</string>
    <string name="desc_def_text">还没有描述内容呢</string>
    <string name="current">当前:</string>
    <string name="add_up">累计:</string>
    <string name="create_combination">配置组合</string>
    <string name="adjust_combination">持仓调整</string>
    <string name="add_combination">添加组合</string>
    <string name="del_combination">删除组合</string>
    <string name="quotes_format">(%1$s)</string>
    <string name="combination_name">组合名称</string>
    <string name="combination_desc">组合描述</string>
    <string name="conb_desc_hint">简要描述 20字以内</string>
    <string name="my_config">我的配置</string>
    <string name="add_postional">添加个股</string>
    <string name="confirm_adjust">确定</string>
    <string name="today_netvalue">当前净值  </string>
    <string name="create_time">成立时间 </string>
    <string name="create_time_format">成立时间 :%1$s</string>
    <string name="descrition_format">简介:%1$s</string>
    <string name="position_from_to">从%1$s调至%2$s</string>
    <string name="select_fund">选择参照基金</string>
    <string name="select_stock">选择股票</string>
    <string name="title_search_stock">搜索</string>
    <string name="create_funds">创建组合</string>
    <string name="search_fund_hint">基金简称/代码/拼音</string>
    <string name="add_postional_format">添加(%1$d)</string>
    <string name="add_text">添加</string>
    <string name="loading_list_items">加载中...</string>
    <string name="netvalue_trend">净值走势</string>
    <string name="performance_comparison">业绩比较</string>
    <string name="position_detail">持仓明细</string>
    <string name="related_news">公告和研报</string>
    <string name="from"> 由</string>
    <string name="to">至</string>
    <string name="to_now">至今</string>
    <string name="stock">股票</string>
    <string name="positions">持仓</string>
    <string name="referto">参照</string>
    <string name="rise_range">涨幅榜</string>
    <string name="rise_value">涨幅</string>
    <string name="drop_range">跌幅榜</string>
    <string name="delete_fllow">取消自选</string>
    <string name="add_fllow">加入自选</string>
    <string name="turnover">换手率</string>
    <string name="turnovev_range">换手榜</string>
    <string name="html_blankspace">&#160;</string>
    <string name="start_netvalue">起始:</string>
    <string name="end_netvalue">结束:</string>
    <string name="netvalue_up">净值涨幅:</string>
    <string name="proportion">占比</string>
    <string name="time_start">%1$s起</string>
    <string name="time_end">%1$s止</string>
    <string name="dialog_start_time_title">开始日期</string>
    <string name="dialog_select_time_title">选择日期</string>
    <string name="dialog_end_time_title">结束日期</string>
    <string name="max_fund_select_tip">最大只能选择5个基金</string>
    <string name="adjust_position">调整配置</string>
    <string name="adjust_history">调仓记录</string>
    <string name="netvalue_comtribute">净值贡献</string>
    <string name="accumulative_comtribute">累计贡献</string>
    <string name="surplus_capital_ratio">剩余资金占比</string>
    <string name="data_deficient">数据不足</string>
    <string name="current_netvalue">当前净值:</string>
    <string name="today_increase">今日增长:</string>
    <string name="today_in_rote">今日收益率:</string>
    <string name="rate">收益率</string>
    <string name="today_rate">今日收益</string>
    <string name="rate_total">任期回报</string>
    <string name="add_up_value">累计收益</string>
    <string name="dialog_before_createday_title">查询时间早于组合创建时间</string>
    <string name="query_from_create">从创建时间开始查询</string>
    <string name="query_before_month">起始时间不能早于创建前1个月</string>
    <string name="hint_account">手机号/邮箱地址</string>
    <string name="logining">登录中...</string>
    <string name="no_net">网络不给力，请稍后再试</string>
    <string name="no_net_connect">网络连接失败，请检查网络</string>
    <string name="mobile">手机号</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="verify_code">验证码</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_again">重新获取</string>
    <string name="blank_get_code">重新发送(%1$d)s</string>
    <string name="getting_code">获取验证码...</string>
    <string name="get_code_fail">获取验证码失败</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_by_captcha">该手机号已经注册过,是否直接登录?</string>
    <string name="has_bind_message">该手机号码已经注册，请更换号码</string>
    <string name="success_desc_f">恭喜您 , 注册成功 !</string>
    <string name="success_desc_s">系统为您生成的用户名:</string>
    <string name="success_desc_t">可通过设置个人帐号信息修改并完善您的个人资料!</string>
    <string name="btn_sc">5秒后自动登录</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_desc">您还没设置过密码，点击获取将发送验证码到您的手机: %1$s。</string>
    <string name="captcha_password_null">验证码或者密码不能为空</string>
    <string name="hint_original_password">请输入原始密码</string>
    <string name="password_null">密码不能为空</string>
    <string name="original_password">原始密码</string>
    <string name="original_password_null">原始密码不能为空</string>
    <string name="set_newpassword_desc">设置新的密码</string>
    <string name="fund_market">基金超市</string>
    <string name="look_at_all">查看全部</string>
    <string name="fund_manager">基金经理</string>
    <string name="profit_rank">收益排行</string>
    <string name="hybrid">混合型</string>
    <string name="title_status_report">举报</string>
    <string name="report_rubbish">垃圾营销</string>
    <string name="report_pornographic">淫秽色情</string>
    <string name="report_no_truly">不实信息</string>
    <string name="report_sensity">敏感信息</string>
    <string name="report_plagiarist">抄袭内容</string>
    <string name="report_harass">骚扰我</string>
    <string name="report_fake">虚假中奖</string>
    <string name="bank_card">银行卡号</string>
    <string name="bank_type">卡类型</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="authorization_bank">《银行转账授权协议》</string>
    <string name="real_name">持卡人</string>
    <string name="hint_real_name">持卡人姓名</string>
    <string name="id_card_no">身份证号</string>
    <string name="hint_id_card_no">持卡人身份证号</string>
    <string name="bank_card_mobile">手机号</string>
    <string name="hint_bank_card_mobile">银行预留手机号</string>
    <string name="pls_input_origin_gesture_password">请输入原手势密码</string>
    <string name="temporary_not_setting_gesture_password">暂不设置</string>
    <string name="resetting_gesture_password">重新设置</string>
    <string name="forget_gesture_password">忘记手势密码?</string>
    <string name="retry">重试</string>
    <string name="trade_pwd_locked">交易密码已被锁定,请3小时候再试</string>
</resources>