<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/widget_padding_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/widget_text_18sp"
        android:text="@string/trade_pwd_locked"
        />

    <View style="@style/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white_grayborder_selector"
            android:textColor="@color/blue"
            android:text="@string/retry"
            />

        <Button
            android:id="@+id/btn_forget_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white_grayborder_selector"
            android:textColor="@color/blue"
            android:text="@string/forget_password"
            />
    </LinearLayout>


</LinearLayout>