<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:background="@drawable/regist_success" />

    <TextView
        android:id="@+id/tv_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_sc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/success_desc_f"
        android:textColor="@color/orange"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/ll_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_desc_s"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sfsfa"
            android:id="@+id/tv_username"
            android:textColor="@color/orange"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sc_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_sc"
        android:layout_below="@id/ll_sc"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:text="@string/success_desc_t"
        android:textSize="18sp" />

    <Button
        android:layout_width="290dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sc_s"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:text="@string/btn_sc"
        android:id="@+id/btn_sc_login"
        android:textColor="@color/white"
        android:background="@drawable/button_register"
        android:textSize="18sp" />

</RelativeLayout>