<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f2f2f2"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_gray_selector"
        android:layout_marginTop="@dimen/widget_margin_xxlarge"
        android:orientation="horizontal"
        android:clickable="true"
        >

        <TextView
            android:id="@+id/bank"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/widget_margin_normal"
            android:text="@string/bank_type"
            android:textSize="@dimen/widget_text_16sp"/>

        <TextView
            android:id="@+id/tv_bank"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_centerVertical="true"
            android:text="@string/bank_card"
            android:textColor="@color/gray_textcolor"
            android:layout_toRightOf="@+id/bank"
            android:focusableInTouchMode="false"
            android:textSize="@dimen/widget_text_16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/widget_margin_xxlarge"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_gray_selector"
            android:clickable="false"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_margin_normal"
                android:text="@string/real_name"
                android:textSize="@dimen/widget_text_16sp"/>

            <com.dkhs.portfolio.ui.widget.ClearableEditText
                android:id="@+id/et_real_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/hint_real_name"
                android:singleLine="true"
                android:textSize="@dimen/widget_text_14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_marginLeft="@dimen/widget_margin_large"
            android:layout_marginRight="@dimen/widget_margin_normal"
            android:background="@color/point_lighter_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_gray_selector"
            android:clickable="false"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_margin_normal"
                android:text="@string/id_card_no"
                android:textSize="@dimen/widget_text_16sp"/>

            <com.dkhs.portfolio.ui.widget.ClearableEditText
                android:id="@+id/et_id_card_no"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/hint_id_card_no"
                android:singleLine="true"
                android:textSize="@dimen/widget_text_14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_marginLeft="@dimen/widget_margin_large"
            android:layout_marginRight="@dimen/widget_margin_normal"
            android:background="@color/point_lighter_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_gray_selector"
            android:clickable="false"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_margin_normal"
                android:text="@string/bank_card_mobile"
                android:textSize="@dimen/widget_text_16sp"/>

            <com.dkhs.portfolio.ui.widget.ClearableEditText
                android:id="@+id/et_bank_card_mobile"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/hint_bank_card_mobile"
                android:singleLine="true"
                android:textSize="@dimen/widget_text_14sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_bind_bank_card"
        style="@style/btn_login_blue"
        android:layout_marginLeft="@dimen/widget_margin_xlarge"
        android:layout_marginRight="@dimen/widget_margin_xlarge"
        android:layout_marginTop="@dimen/widget_margin_xxlarge"
        android:enabled="false"
        android:text="下一步"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="visible"
        >

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/cb_agree_seletor"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/widget_margin_xlarge"
            android:layout_marginRight="5dp"
            android:text="@string/read_and_agree"
            android:gravity="top"
            android:textSize="@dimen/widget_text_14sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="top"
            android:textSize="@dimen/widget_text_14sp"
            android:text="@string/authorization_bank"
            android:textColor="@drawable/agreement_color_selector"
            android:id="@+id/rlt_agreement"
            />
    </LinearLayout>

</LinearLayout>