<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:layout_weight="1"
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:textSize="@dimen/widget_text_16sp"
        android:textColor="@color/black"
        android:gravity="center"

        android:text="@string/pls_input_origin_gesture_password"
        />

    <com.yang.gesturepassword.LockPatternView
        android:id="@+id/lockPatternView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2.5"
        android:layout_marginLeft="@dimen/widget_margin_normal"
        android:layout_marginRight="@dimen/widget_margin_normal"
        android:layout_gravity="center_horizontal" />
    <RelativeLayout
        android:layout_marginLeft="@dimen/widget_margin_large"
        android:layout_marginRight="@dimen/widget_margin_large"
        android:paddingTop="@dimen/widget_padding_xxlarge"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dip"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_not_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/gray_text_selector"
            android:textSize="16sp"
            android:text="@string/temporary_not_setting_gesture_password"
            />
        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text_selector"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/forget_gesture_password"
            />
        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text_selector"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/resetting_gesture_password"
            />

    </RelativeLayout>

</LinearLayout>