<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_fund_market"
        style="@style/item_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lv_white_selector"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/setting_image_right"
            android:text="@string/look_at_all"
            android:textColor="@color/gray_textcolor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/fund_market"
            android:textColor="@color/black" />
    </RelativeLayout>

    <LinearLayout
        style="@style/item_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_fund_manager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/lv_white_selector"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/fund_manager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_manager"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/widget_text_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_profit_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/lv_white_selector"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profit_rank" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profit_rank"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/widget_text_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hybrid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/lv_white_selector"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/hybrid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hybrid"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/widget_text_12sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>